@@ -1,6 +1,2 @@
 Main-Class: org.schwering.evi.gui.EVI
-Module-Class: org.schwering.evi.test.Test
-Module-Version: 1.0
-Module-Name: Test
-Module-Protocols: http https
-Module-Information: about.html
+Module-Info: org.schwering.evi.test.TestInfo
