@@ -127,7 +127,7 @@ implements IPanel {
 		if (instanceCount == 0) {
 			instance = null;
 			IModuleLoaderListener l = (IModuleLoaderListener)tablePanel.model;
-			ModuleLoader.removeModuleLoaderListener(l);
+			ModuleLoader.removeListener(l);
 		}
 	}
 	
@@ -446,7 +446,7 @@ implements IPanel {
 			for (int i = 0; i < containers.length; i++) {
 				modules.add(containers[i]);
 			}
-			ModuleLoader.addModuleLoaderListener(this);
+			ModuleLoader.addListener(this);
 		}
 
 		/* (non-Javadoc)
