@@ -1,8 +1,10 @@
 package org.schwering.evi.test;
 
+import java.awt.Component;
 import java.net.URL;
 
-import org.schwering.evi.core.IButtonable;
+import javax.swing.Icon;
+
 import org.schwering.evi.core.IModule;
 import org.schwering.evi.core.IPanel;
 import org.schwering.evi.util.HTMLBrowser;
@@ -12,7 +14,7 @@ import org.schwering.evi.util.HTMLBrowser;
  * @author Christoph Schwering (mailto:schwering@gmail.com)
  * @version $Id: Test.java 50 2006-05-11 00:21:14Z schwering $
  */
-public class Test extends HTMLBrowser implements IModule, IPanel, IButtonable {
+public class Test extends HTMLBrowser implements IModule, IPanel {
 	private static final long serialVersionUID = 6675184535258501432L;
 
 	public Test(URL url) {
@@ -29,5 +31,17 @@ public class Test extends HTMLBrowser implements IModule, IPanel, IButtonable {
 	
 	public String getTitle() {
 		return "Testmodul";
+	}
+
+	public void dispose() {
+		super.dispose();
+	}
+
+	public Icon getIcon() {
+		return super.getIcon();
+	}
+
+	public Component getPanelInstance() {
+		return super.getPanelInstance();
 	}
 }
