@@ -1,3 +1,6 @@
+schwering@gmail.com 2006-05-26
+    Completed framework with a major revision of org.schwering.evi.core.
+
 schwering@gmail.com 2006-05-07
 	Mike's Pong just ran for the first time. It's the first real running 
 	module -- without any problems!
